--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
 </head>
 
-<body>rlfdskgfngskdnfgknkgsnkfdgsngkndfskgndkfngkdfnkngkfdngknfdkgnfkcvnckvnckxvnkcxnvkxcnvkcxnkxnknknknkndkdnkdnfkdxnkfdnxkndknknvkxnknknknknk
+<body>
     <header>
         <div class="space">
             <div class="h-left">
